capsules/spectral-bridge/tests/ui/reciprocal_resonance_cannot_deserialize.stderr
error[E0277]: the trait bound `ReciprocalUptakeReceiptV3: serde::Deserialize<'de>` is not satisfied
 --> tests/ui/reciprocal_resonance_cannot_deserialize.rs:4:40
  |
4 |     let _: ReciprocalUptakeReceiptV3 = serde_json::from_str("{}").unwrap();
  |                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `serde_core::de::Deserialize<'_>` is not implemented for `ReciprocalUptakeReceiptV3`
  |
  = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `ReciprocalUptakeReceiptV3` type
  = note: for types from other crates check whether the crate offers a `serde` feature flag
  = help: the following other types implement trait `serde_core::de::Deserialize<'de>`:
            &'a Path
            &'a [u8]
            &'a str
            ()
            (T,)
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
          and $N others
note: required by a bound in `serde_json::from_str`
 --> $CARGO/serde_json-$VERSION/src/de.rs
  |
  | pub fn from_str<'a, T>(s: &'a str) -> Result<T>
  |        -------- required by a bound in this function
  | where
  |     T: de::Deserialize<'a>,
  |        ^^^^^^^^^^^^^^^^^^^ required by this bound in `from_str`
