capsules/spectral-bridge/tests/ui/reciprocal_resonance_cannot_deserialize.rs
use spectral_bridge_server::reciprocal_experiential::ReciprocalUptakeReceiptV3;

fn main() {
    let _: ReciprocalUptakeReceiptV3 = serde_json::from_str("{}").unwrap();
}
